--- a/quiz_question_3.html
+++ b/quiz_question_3.html
@@ -48,17 +48,17 @@
                     <button class="sidebar-lesson-start-btn" onclick="window.location.href='archive_learning_assessment.html'">Start</button>
                 </div>
                 <ul class="lesson-list">
-                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Introduction to Archivehubs</span> <i class="fas fa-check-circle lesson-status-icon"></i></a></li>
-                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
-                    <li class="lesson-list-item has-submenu">
+                    <li class="lesson-list-item"><a href="archive_learning_2.html"><span class="lesson-title">Introduction to Archivehubs</span> <i class="fas fa-check-circle lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item active"><a href="quiz_question_1.html"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
+                    <li class="lesson-list-item has-submenu expanded">
                         <a href="#" class="submenu-toggle">
                             <span class="lesson-title">Overview of Archivehubs</span> 
                             <i class="fas fa-chevron-down submenu-icon"></i>
                         </a>
-                        <ul class="submenu">
-                            <li class="submenu-item"><a href="#"><span class="lesson-title">Purpose</span></a></li>
-                            <li class="submenu-item"><a href="#"><span class="lesson-title">Benefits</span></a></li>
-                            <li class="submenu-item"><a href="#"><span class="lesson-title">Knowledge Check</span></a></li>
+                        <ul class="submenu" style="max-height: 200px;">
+                            <li class="submenu-item"><a href="overview_purpose.html"><span class="lesson-title">Purpose</span></a></li>
+                            <li class="submenu-item"><a href="overview_benefits.html"><span class="lesson-title">Benefits</span></a></li>
+                            <li class="submenu-item active"><a href="quiz_question_1.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
@@ -109,8 +109,8 @@
                     </div>
                 </div>
                 
-                <div class="next-lesson-info">
-                    <a href="#" class="next-lesson-link">Next > Overview of Archivehubs</a>
+                <div class="lesson-navigation-footer">
+                    <a href="#" class="next-lesson-link">Next > Key Features and Functionalities of Archivehubs</a>
                 </div>
             </main>
         </div>
