--- a/archive_learning_2.html
+++ b/archive_learning_2.html
@@ -57,9 +57,9 @@
                 </div>
                 <ul class="lesson-list">
                     <li class="lesson-list-item active"><a href="archive_learning_2.html"><span class="lesson-title">Introduction to Archivehubs</span> <i class="fas fa-check-circle lesson-status-icon"></i></a></li>
-                    <li class="lesson-list-item"><a href="quiz_question_1.html"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
+                    <li class="lesson-list-item"><a href="archive_learning_assessment.html"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
                     <li class="lesson-list-item has-submenu">
-                        <a href="#" class="submenu-toggle">
+                        <a href="" class="submenu-toggle">
                             <span class="lesson-title">Overview of Archivehubs</span> 
                             <i class="fas fa-chevron-down submenu-icon"></i>
                         </a>
