--- a/key_features.html
+++ b/key_features.html
@@ -44,14 +44,14 @@
                             <span class="badge badge-basic">Basic</span>
                         </div>
                     </div>
-                    <button class="sidebar-lesson-start-btn" onclick="window.location.href='archive_learning_assessment.html'">Start</button>
+                    <button class="sidebar-lesson-start-btn" onclick="window.location.href='overview_purpose.html'">Start</button>
                 </div>
                 <ul class="lesson-list">
-                    <li class="lesson-list-item"><a href="archive_learning_2.html"><span class="lesson-title">Introduction to Archivehubs</span></a></li>
+                    <li class="lesson-list-item"><a href="archive_learning_2.html"><span class="lesson-title">Introduction to Archivehubs</span> <i class="fas fa-check-circle lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="archive_learning_assessment.html"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
                     <li class="lesson-list-item has-submenu">
-                        <a href="#" class="submenu-toggle">
-                            <span class="lesson-title">Overview of Archivehubs</span>
+                        <a href="" class="submenu-toggle">
+                            <span class="lesson-title">Overview of Archivehubs</span> 
                             <i class="fas fa-chevron-down submenu-icon"></i>
                         </a>
                         <ul class="submenu">
@@ -60,10 +60,10 @@
                             <li class="submenu-item"><a href="quiz_question_1.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item active"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span></a></li>
-                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Understanding the User Dashboard on Archivehubs</span></a></li>
-                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Navigating the Platform</span></a></li>
-                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Course Review</span></a></li>
+                    <li class="lesson-list-item active"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Understanding the User Dashboard on Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Navigating the Platform</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Course Review</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                 </ul>
             </aside>
             <main class="lesson-main-content">
@@ -78,49 +78,49 @@
                     <h2 style="font-size: 22px; font-weight: 600; color: var(--text-color); margin-top: 30px; margin-bottom: 15px; padding-bottom: 5px; border-bottom: 1px solid #eee;">Digital Tools</h2>
                     <ol style="font-size: 16px; font-weight: 600; line-height: 1.7; margin-left: 20px;">
                         <li>Secure Cloud Storage
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; list-style-type: disc; margin-left: 20px;">
+                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
                                 <li>End to-end encrypted storage for digital assets.</li>
                                 <li>AI-powered categorization and metadata tagging for easy file retrieval.</li>
                             </ul>
                         </li>
                         <li>AI-Powered Organization
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; list-style-type: disc; margin-left: 20px;">
+                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
                                 <li>Automated tagging and smart search functionality.</li>
                                 <li>Advanced filters for quick access to relevant assets.</li>
                             </ul>
                         </li>
                         <li>Feeds & Activity Updates
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; list-style-type: disc; margin-left: 20px;">
+                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
                                 <li>Personalized content feeds for updates on saved assets and shared files.</li>
                                 <li>Notifications for new collaborations, messages, and asset interactions</li>
                             </ul>
                         </li>
                         <li>Seamless Collaboration & Networking
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; list-style-type: disc; margin-left: 20px;">
+                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
                                 <li>Share files with teams, set permissions, and manage access controls.</li>
                                 <li>Connect with professionals, join communities, and participate in industry discussions.</li>
                             </ul>
                         </li>
                         <li>Monetization & Licensing
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; list-style-type: disc; margin-left: 20px;">
+                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
                                 <li>Sell or license digital assets through a secure marketplace.</li>
                                 <li>Track sales, manage pricing, and receive payments effortlessly.</li>
                             </ul>
                         </li>
                         <li>Interactive Tutorials & Learning Hub
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; list-style-type: disc; margin-left: 20px;">
+                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
                                 <li>Step-by-step guides to help users navigate the platform.</li>
                                 <li>Educational resources on digital asset management, monetization, and security.</li>
                             </ul>
                         </li>
                         <li>Affiliate Marketing Program
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; list-style-type: disc; margin-left: 20px;">
+                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
                                 <li>Earn commissions by referring new users to the platform.</li>
                                 <li>Track referral performance through a dedicated dashboard.</li>
                             </ul>
                         </li>
                         <li>Customization & Integration
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; list-style-type: disc; margin-left: 20px;">
+                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
                                 <li>Personalize user settings and preferences.</li>
                                 <li>Integrate with third-party tools and cloud services for enhanced productivity.</li>
                             </ul>
