--- a/archive_learning_assessment.html
+++ b/archive_learning_assessment.html
@@ -53,23 +53,23 @@
                             <span class="badge badge-basic">Basic</span>
                         </div>
                     </div>
-                    <button class="sidebar-lesson-start-btn">Start</button>
+                    <button class="sidebar-lesson-start-btn" onclick="window.location.href='overview_purpose.html'">Start</button>
                 </div>
                 <ul class="lesson-list">
-                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Introduction to Archivehubs</span> <i class="fas fa-check-circle lesson-status-icon"></i></a></li>
-                    <li class="lesson-list-item active"><a href="#"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
+                    <li class="lesson-list-item"><a href="archive_learning_2.html"><span class="lesson-title">Introduction to Archivehubs</span> <i class="fas fa-check-circle lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item active"><a href="archive_learning_assessment.html"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
                     <li class="lesson-list-item has-submenu">
-                        <a href="#" class="submenu-toggle">
+                        <a href="" class="submenu-toggle">
                             <span class="lesson-title">Overview of Archivehubs</span> 
                             <i class="fas fa-chevron-down submenu-icon"></i>
                         </a>
                         <ul class="submenu">
-                            <li class="submenu-item"><a href="#"><span class="lesson-title">Purpose</span></a></li>
-                            <li class="submenu-item"><a href="#"><span class="lesson-title">Benefits</span></a></li>
-                            <li class="submenu-item"><a href="#"><span class="lesson-title">Knowledge Check</span></a></li>
+                            <li class="submenu-item"><a href="overview_purpose.html"><span class="lesson-title">Purpose</span></a></li>
+                            <li class="submenu-item"><a href="overview_benefits.html"><span class="lesson-title">Benefits</span></a></li>
+                            <li class="submenu-item"><a href="quiz_question_1.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Understanding the User Dashboard on Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Navigating the Platform</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Course Review</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
