--- a/key_features.html
+++ b/key_features.html
@@ -61,6 +61,7 @@
                         </ul>
                     </li>
                     <li class="lesson-list-item active"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item"><a href="talent_insight.html"><span class="lesson-title">Talent Insight: Job Search & Employment Opportunities</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Understanding the User Dashboard on Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Navigating the Platform</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Course Review</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
