--- a/navigating_quiz_question_1.html
+++ b/navigating_quiz_question_1.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Key Features and Functionalities of Archivehubs - Archivehubs Learning Labs</title>
+    <title>Question 1 - Navigating the Platform Knowledge Check - Archivehubs Learning Labs</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/archive-learning.css">
-    <script src="js/archive-learning.js" defer></script>
+    <script src="js/archive-learning.js"></script>
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,7 @@
                 <i class="fas fa-bars"></i>
             </div>
         </nav>
+
         <div class="lesson-page-content">
             <aside class="lesson-sidebar">
                 <div class="sidebar-header">
@@ -60,7 +61,7 @@
                             <li class="submenu-item"><a href="quiz_question_1.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item active"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="talent_insight.html"><span class="lesson-title">Talent Insight: Job Search & Employment Opportunities</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item has-submenu">
                         <a href="" class="submenu-toggle">
@@ -75,77 +76,84 @@
                             <li class="submenu-item"><a href="dashboard_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Navigating the Platform</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item has-submenu expanded">
+                        <a href="" class="submenu-toggle">
+                            <span class="lesson-title">Navigating the Platform</span> 
+                            <i class="fas fa-chevron-down submenu-icon"></i>
+                        </a>
+                        <ul class="submenu" style="max-height: 200px;">
+                            <li class="submenu-item"><a href="getting_started.html"><span class="lesson-title">Getting Started with Archivehubs</span></a></li>
+                            <li class="submenu-item"><a href="exploring_feeds.html"><span class="lesson-title">Exploring Feeds</span></a></li>
+                            <li class="submenu-item"><a href="managing_notifications.html"><span class="lesson-title">Managing Notifications and Activity Logs</span></a></li>
+                            <li class="submenu-item"><a href="navigating_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
+                        </ul>
+                    </li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Course Review</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                 </ul>
             </aside>
+
             <main class="lesson-main-content">
                 <div class="main-content-header">
-                    <i class="fas fa-clipboard-list lesson-icon"></i>
-                    <span class="lesson-label">Lesson</span>
+                    <i class="fas fa-question-circle lesson-icon"></i>
+                    <span class="lesson-label">Knowledge Check</span>
                 </div>
-                <div class="main-content-section">
-                    <h2 class="lesson-title-main">Key Features and Functionalities of Archivehubs</h2>
-                    <h3 class="lesson-title-sub">Key Features and Functionalities of Archivehubs</h3>
-                    <img src="https://placehold.co/800x300/cccccc/333333?text=Key+Features+Image" alt="Key Features" class="lesson-image">
-                    <h2 style="font-size: 22px; font-weight: 600; color: var(--text-color); margin-top: 30px; margin-bottom: 15px; padding-bottom: 5px; border-bottom: 1px solid #eee;">Digital Tools</h2>
-                    <ol style="font-size: 16px; font-weight: 600; line-height: 1.7; margin-left: 20px;">
-                        <li>Secure Cloud Storage
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>End to-end encrypted storage for digital assets.</li>
-                                <li>AI-powered categorization and metadata tagging for easy file retrieval.</li>
-                            </ul>
-                        </li>
-                        <li>AI-Powered Organization
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Automated tagging and smart search functionality.</li>
-                                <li>Advanced filters for quick access to relevant assets.</li>
-                            </ul>
-                        </li>
-                        <li>Feeds & Activity Updates
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Personalized content feeds for updates on saved assets and shared files.</li>
-                                <li>Notifications for new collaborations, messages, and asset interactions</li>
-                            </ul>
-                        </li>
-                        <li>Seamless Collaboration & Networking
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Share files with teams, set permissions, and manage access controls.</li>
-                                <li>Connect with professionals, join communities, and participate in industry discussions.</li>
-                            </ul>
-                        </li>
-                        <li>Monetization & Licensing
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Sell or license digital assets through a secure marketplace.</li>
-                                <li>Track sales, manage pricing, and receive payments effortlessly.</li>
-                            </ul>
-                        </li>
-                        <li>Interactive Tutorials & Learning Hub
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Step-by-step guides to help users navigate the platform.</li>
-                                <li>Educational resources on digital asset management, monetization, and security.</li>
-                            </ul>
-                        </li>
-                        <li>Affiliate Marketing Program
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Earn commissions by referring new users to the platform.</li>
-                                <li>Track referral performance through a dedicated dashboard.</li>
-                            </ul>
-                        </li>
-                        <li>Customization & Integration
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Personalize user settings and preferences.</li>
-                                <li>Integrate with third-party tools and cloud services for enhanced productivity.</li>
-                            </ul>
-                        </li>
-                    </ol>
-                    <div class="lesson-navigation-footer" style="margin-top: 40px;">
-                        <a href="#" class="next-lesson-link" style="float: right;">Next &rsaquo; Talent Insight: Job Search & Employment Opportunities</a>
+
+                <div class="lesson-content">
+                    <div class="quiz-container">
+                        <div class="quiz-header">
+                            <div class="quiz-progress">
+                                <span class="progress-text">Question 1 of 3</span>
+                                <div class="progress-bar">
+                                    <div class="progress-fill" style="width: 33.33%;"></div>
+                                </div>
+                            </div>
+                            <h1 class="quiz-title">Getting Started with Archivehubs</h1>
+                        </div>
+
+                        <div class="question-container">
+                            <p class="question-text">
+                                What is the first step in setting up your Archivehubs account?
+                            </p>
+
+                            <div class="options-container">
+                                <label class="option-item" onclick="selectOption(this, 'A')">
+                                    <input type="radio" name="question1" value="A" style="display: none;">
+                                    <span class="option-letter">A</span>
+                                    <span class="option-text">Upload your first digital asset</span>
+                                </label>
+
+                                <label class="option-item" onclick="selectOption(this, 'B')">
+                                    <input type="radio" name="question1" value="B" style="display: none;">
+                                    <span class="option-letter">B</span>
+                                    <span class="option-text">Complete your profile with professional information</span>
+                                </label>
+
+                                <label class="option-item" onclick="selectOption(this, 'C')">
+                                    <input type="radio" name="question1" value="C" style="display: none;">
+                                    <span class="option-letter">C</span>
+                                    <span class="option-text">Account registration with email verification</span>
+                                </label>
+
+                                <label class="option-item" onclick="selectOption(this, 'D')">
+                                    <input type="radio" name="question1" value="D" style="display: none;">
+                                    <span class="option-letter">D</span>
+                                    <span class="option-text">Connect with other professionals</span>
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-navigation">
+                            <button class="next-btn" onclick="saveAnswerAndContinue('question1', 'navigating_quiz_question_2.html')" disabled>
+                                Next Question
+                                <i class="fas fa-arrow-right"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </main>
         </div>
     </div>
+
     <footer class="lesson-footer">
         <p>Get the Archivehubs App General Terms</p>
         <p>ARCHIVEHUBS: ENINK Investment Limited &copy; 2025</p>
@@ -162,5 +170,23 @@
         </div>
         <p class="enink-learning">Power by ENINK Learning</p>
     </footer>
+
+    <script>
+        // Initialize localStorage for this quiz
+        if (!localStorage.getItem('navigatingQuizAnswers')) {
+            localStorage.setItem('navigatingQuizAnswers', JSON.stringify({}));
+        }
+
+        // Load saved answer if exists
+        window.addEventListener('load', function() {
+            const savedAnswers = JSON.parse(localStorage.getItem('navigatingQuizAnswers'));
+            if (savedAnswers.question1) {
+                const optionElement = document.querySelector(`input[value="${savedAnswers.question1}"]`);
+                if (optionElement) {
+                    selectOption(optionElement.parentElement, savedAnswers.question1);
+                }
+            }
+        });
+    </script>
 </body>
 </html> 
