--- a/dashboard_knowledge_check.html
+++ b/dashboard_knowledge_check.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Key Features and Functionalities of Archivehubs - Archivehubs Learning Labs</title>
+    <title>Knowledge Check - Understanding the User Dashboard on Archivehubs - Archivehubs Learning Labs</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/archive-learning.css">
-    <script src="js/archive-learning.js" defer></script>
+    <script src="js/archive-learning.js"></script>
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,7 @@
                 <i class="fas fa-bars"></i>
             </div>
         </nav>
+
         <div class="lesson-page-content">
             <aside class="lesson-sidebar">
                 <div class="sidebar-header">
@@ -60,92 +61,55 @@
                             <li class="submenu-item"><a href="quiz_question_1.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item active"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="talent_insight.html"><span class="lesson-title">Talent Insight: Job Search & Employment Opportunities</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
-                    <li class="lesson-list-item has-submenu">
+                    <li class="lesson-list-item has-submenu expanded">
                         <a href="" class="submenu-toggle">
                             <span class="lesson-title">Understanding the User Dashboard on Archivehubs</span> 
                             <i class="fas fa-chevron-down submenu-icon"></i>
                         </a>
-                        <ul class="submenu">
+                        <ul class="submenu" style="max-height: 200px;">
                             <li class="submenu-item"><a href="dashboard_overview.html"><span class="lesson-title">Dashboard Overview</span></a></li>
                             <li class="submenu-item"><a href="navigation_menu.html"><span class="lesson-title">Navigation Menu</span></a></li>
                             <li class="submenu-item"><a href="activity_feed_notifications.html"><span class="lesson-title">Activity Feed & Notifications</span></a></li>
                             <li class="submenu-item"><a href="search_ai_smart_tagging.html"><span class="lesson-title">Search & AI Smart Tagging</span></a></li>
-                            <li class="submenu-item"><a href="dashboard_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
+                            <li class="submenu-item active"><a href="dashboard_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Navigating the Platform</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Course Review</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                 </ul>
             </aside>
+
             <main class="lesson-main-content">
                 <div class="main-content-header">
                     <i class="fas fa-clipboard-list lesson-icon"></i>
                     <span class="lesson-label">Lesson</span>
                 </div>
-                <div class="main-content-section">
-                    <h2 class="lesson-title-main">Key Features and Functionalities of Archivehubs</h2>
-                    <h3 class="lesson-title-sub">Key Features and Functionalities of Archivehubs</h3>
-                    <img src="https://placehold.co/800x300/cccccc/333333?text=Key+Features+Image" alt="Key Features" class="lesson-image">
-                    <h2 style="font-size: 22px; font-weight: 600; color: var(--text-color); margin-top: 30px; margin-bottom: 15px; padding-bottom: 5px; border-bottom: 1px solid #eee;">Digital Tools</h2>
-                    <ol style="font-size: 16px; font-weight: 600; line-height: 1.7; margin-left: 20px;">
-                        <li>Secure Cloud Storage
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>End to-end encrypted storage for digital assets.</li>
-                                <li>AI-powered categorization and metadata tagging for easy file retrieval.</li>
-                            </ul>
-                        </li>
-                        <li>AI-Powered Organization
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Automated tagging and smart search functionality.</li>
-                                <li>Advanced filters for quick access to relevant assets.</li>
-                            </ul>
-                        </li>
-                        <li>Feeds & Activity Updates
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Personalized content feeds for updates on saved assets and shared files.</li>
-                                <li>Notifications for new collaborations, messages, and asset interactions</li>
-                            </ul>
-                        </li>
-                        <li>Seamless Collaboration & Networking
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Share files with teams, set permissions, and manage access controls.</li>
-                                <li>Connect with professionals, join communities, and participate in industry discussions.</li>
-                            </ul>
-                        </li>
-                        <li>Monetization & Licensing
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Sell or license digital assets through a secure marketplace.</li>
-                                <li>Track sales, manage pricing, and receive payments effortlessly.</li>
-                            </ul>
-                        </li>
-                        <li>Interactive Tutorials & Learning Hub
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Step-by-step guides to help users navigate the platform.</li>
-                                <li>Educational resources on digital asset management, monetization, and security.</li>
-                            </ul>
-                        </li>
-                        <li>Affiliate Marketing Program
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Earn commissions by referring new users to the platform.</li>
-                                <li>Track referral performance through a dedicated dashboard.</li>
-                            </ul>
-                        </li>
-                        <li>Customization & Integration
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Personalize user settings and preferences.</li>
-                                <li>Integrate with third-party tools and cloud services for enhanced productivity.</li>
-                            </ul>
-                        </li>
-                    </ol>
-                    <div class="lesson-navigation-footer" style="margin-top: 40px;">
-                        <a href="#" class="next-lesson-link" style="float: right;">Next &rsaquo; Talent Insight: Job Search & Employment Opportunities</a>
+
+                <div class="quiz-content">
+                    <h1 class="quiz-title">Understanding the User Dashboard on Archivehubs</h1>
+                    <h2 class="quiz-subtitle">3 questions</h2>
+                    
+                    <div class="quiz-info-container">
+                        <div class="quiz-info-content">
+                            <i class="fas fa-clipboard-check quiz-info-icon"></i>
+                            <h3 class="quiz-info-title">Ready to test your knowledge?</h3>
+                            <p class="quiz-info-description">
+                                This knowledge check will help you verify your understanding of the User Dashboard features and functionality.
+                            </p>
+                            <button class="btn btn-start-quiz" onclick="window.location.href='dashboard_quiz_question_1.html'">Start Quiz</button>
+                        </div>
                     </div>
+                </div>
+                
+                <div class="lesson-navigation-footer">
+                    <a href="#" class="next-lesson-link">Next > Getting Started with Archivehubs</a>
                 </div>
             </main>
         </div>
     </div>
+
     <footer class="lesson-footer">
         <p>Get the Archivehubs App General Terms</p>
         <p>ARCHIVEHUBS: ENINK Investment Limited &copy; 2025</p>
