--- a/navigating_knowledge_check.html
+++ b/navigating_knowledge_check.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Key Features and Functionalities of Archivehubs - Archivehubs Learning Labs</title>
+    <title>Knowledge Check - Navigating the Platform - Archivehubs Learning Labs</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/archive-learning.css">
-    <script src="js/archive-learning.js" defer></script>
+    <script src="js/archive-learning.js"></script>
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,7 @@
                 <i class="fas fa-bars"></i>
             </div>
         </nav>
+
         <div class="lesson-page-content">
             <aside class="lesson-sidebar">
                 <div class="sidebar-header">
@@ -60,7 +61,7 @@
                             <li class="submenu-item"><a href="quiz_question_1.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item active"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item"><a href="key_features.html"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="talent_insight.html"><span class="lesson-title">Talent Insight: Job Search & Employment Opportunities</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item has-submenu">
                         <a href="" class="submenu-toggle">
@@ -75,77 +76,87 @@
                             <li class="submenu-item"><a href="dashboard_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item"><a href="#"><span class="lesson-title">Navigating the Platform</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item has-submenu expanded">
+                        <a href="" class="submenu-toggle">
+                            <span class="lesson-title">Navigating the Platform</span> 
+                            <i class="fas fa-chevron-down submenu-icon"></i>
+                        </a>
+                        <ul class="submenu" style="max-height: 200px;">
+                            <li class="submenu-item"><a href="getting_started.html"><span class="lesson-title">Getting Started with Archivehubs</span></a></li>
+                            <li class="submenu-item"><a href="exploring_feeds.html"><span class="lesson-title">Exploring Feeds</span></a></li>
+                            <li class="submenu-item"><a href="managing_notifications.html"><span class="lesson-title">Managing Notifications and Activity Logs</span></a></li>
+                            <li class="submenu-item active"><a href="navigating_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
+                        </ul>
+                    </li>
                     <li class="lesson-list-item"><a href="#"><span class="lesson-title">Course Review</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
                 </ul>
             </aside>
+
             <main class="lesson-main-content">
                 <div class="main-content-header">
-                    <i class="fas fa-clipboard-list lesson-icon"></i>
-                    <span class="lesson-label">Lesson</span>
+                    <i class="fas fa-question-circle lesson-icon"></i>
+                    <span class="lesson-label">Knowledge Check</span>
                 </div>
-                <div class="main-content-section">
-                    <h2 class="lesson-title-main">Key Features and Functionalities of Archivehubs</h2>
-                    <h3 class="lesson-title-sub">Key Features and Functionalities of Archivehubs</h3>
-                    <img src="https://placehold.co/800x300/cccccc/333333?text=Key+Features+Image" alt="Key Features" class="lesson-image">
-                    <h2 style="font-size: 22px; font-weight: 600; color: var(--text-color); margin-top: 30px; margin-bottom: 15px; padding-bottom: 5px; border-bottom: 1px solid #eee;">Digital Tools</h2>
-                    <ol style="font-size: 16px; font-weight: 600; line-height: 1.7; margin-left: 20px;">
-                        <li>Secure Cloud Storage
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>End to-end encrypted storage for digital assets.</li>
-                                <li>AI-powered categorization and metadata tagging for easy file retrieval.</li>
+
+                <div class="lesson-content">
+                    <div class="knowledge-check-cover">
+                        <div class="knowledge-check-header">
+                            <h1 class="knowledge-check-title">Knowledge Check: Navigating the Platform</h1>
+                            <p class="knowledge-check-description">
+                                Test your understanding of platform navigation, getting started procedures, feed exploration, and notification management.
+                            </p>
+                        </div>
+
+                        <div class="knowledge-check-info">
+                            <div class="info-card">
+                                <i class="fas fa-list-ol info-icon"></i>
+                                <div class="info-content">
+                                    <h3>3 Questions</h3>
+                                    <p>Multiple choice questions covering key concepts</p>
+                                </div>
+                            </div>
+                            <div class="info-card">
+                                <i class="fas fa-clock info-icon"></i>
+                                <div class="info-content">
+                                    <h3>5-10 Minutes</h3>
+                                    <p>Estimated time to complete the assessment</p>
+                                </div>
+                            </div>
+                            <div class="info-card">
+                                <i class="fas fa-trophy info-icon"></i>
+                                <div class="info-content">
+                                    <h3>Certificate</h3>
+                                    <p>Earn a certificate upon successful completion</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="knowledge-check-topics">
+                            <h2>Topics Covered:</h2>
+                            <ul class="topics-list">
+                                <li>Account setup and initial configuration</li>
+                                <li>Content feed navigation and interaction</li>
+                                <li>Notification management and customization</li>
+                                <li>Activity log tracking and reporting</li>
                             </ul>
-                        </li>
-                        <li>AI-Powered Organization
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Automated tagging and smart search functionality.</li>
-                                <li>Advanced filters for quick access to relevant assets.</li>
-                            </ul>
-                        </li>
-                        <li>Feeds & Activity Updates
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Personalized content feeds for updates on saved assets and shared files.</li>
-                                <li>Notifications for new collaborations, messages, and asset interactions</li>
-                            </ul>
-                        </li>
-                        <li>Seamless Collaboration & Networking
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Share files with teams, set permissions, and manage access controls.</li>
-                                <li>Connect with professionals, join communities, and participate in industry discussions.</li>
-                            </ul>
-                        </li>
-                        <li>Monetization & Licensing
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Sell or license digital assets through a secure marketplace.</li>
-                                <li>Track sales, manage pricing, and receive payments effortlessly.</li>
-                            </ul>
-                        </li>
-                        <li>Interactive Tutorials & Learning Hub
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Step-by-step guides to help users navigate the platform.</li>
-                                <li>Educational resources on digital asset management, monetization, and security.</li>
-                            </ul>
-                        </li>
-                        <li>Affiliate Marketing Program
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Earn commissions by referring new users to the platform.</li>
-                                <li>Track referral performance through a dedicated dashboard.</li>
-                            </ul>
-                        </li>
-                        <li>Customization & Integration
-                            <ul style="font-size: 16px; font-weight: 400; margin-top: 10px; margin-bottom: 10px; margin-left: 20px;">
-                                <li>Personalize user settings and preferences.</li>
-                                <li>Integrate with third-party tools and cloud services for enhanced productivity.</li>
-                            </ul>
-                        </li>
-                    </ol>
-                    <div class="lesson-navigation-footer" style="margin-top: 40px;">
-                        <a href="#" class="next-lesson-link" style="float: right;">Next &rsaquo; Talent Insight: Job Search & Employment Opportunities</a>
+                        </div>
+
+                        <div class="knowledge-check-actions">
+                            <button class="start-quiz-btn" onclick="window.location.href='navigating_quiz_question_1.html'">
+                                <i class="fas fa-play"></i>
+                                Start Knowledge Check
+                            </button>
+                            <a href="managing_notifications.html" class="review-lesson-btn">
+                                <i class="fas fa-book"></i>
+                                Review Lesson
+                            </a>
+                        </div>
                     </div>
                 </div>
             </main>
         </div>
     </div>
+
     <footer class="lesson-footer">
         <p>Get the Archivehubs App General Terms</p>
         <p>ARCHIVEHUBS: ENINK Investment Limited &copy; 2025</p>
